IFS-388 - Fixes link on assessor panel dashboard to accept/reject screen.

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -54,7 +54,7 @@
                     <ul>
 
                         <li th:each="app,iterStat : ${model.applications}"
-                            th:with="reviewUrl=@{/{reviewId}/review(reviewId=${app.reviewId})}"
+                            th:with="reviewUrl=@{/review/{reviewId}(reviewId=${app.reviewId})}"
                             th:class="${(app.pending ? 'status-2-col' : '')}">
 
                             <th:block>
