IFS-1138 - Removes disabled link on assessor applications for panel.

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-for-panel-dashboard.html
@@ -59,8 +59,8 @@
 
                             <th:block>
                                 <div class="task">
-                                    <h3 class="heading-small"><a class="disabled" aria-disabled="true"
-                                        th:text="${app.displayLabel}"/>
+                                    <h3 class="heading-small" th:text="${app.displayLabel}">
+                                        Application name
                                     </h3>
                                     <p th:text="${app.leadOrganisation}" class="no-margin"/>
                                 </div>
