--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer.html
@@ -14,16 +14,8 @@
         <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Projects in setup',linkClass='link-back',linkUrl=@{/competition/{id}/status (id=${model.competitionSummary.competitionId})}" />
 
         <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-            <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">Please check this page.</h2>
-            <ul class="error-summary-list">
-                <li th:each="err : ${#fields.detailedErrors('${form.*}')}">
-                    <th:block th:if="${err.global || err.fieldName == 'formInput[cost]'}" th:text="${err.message}">Non-field specific message</th:block>
-                    <th:block th:unless="${err.global || err.fieldName == 'formInput[cost]'}">
-                        <th:block th:if="${err.fieldName != null && err.fieldName == ''}" th:text="${err.message}">The error message</th:block>
-                        <a th:unless="${#strings.isEmpty(err.fieldName)}" th:href="|#${err.fieldName}|" th:text="${err.message}">The error message</a>
-                    </th:block>
-                </li>
-            </ul>
+            <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">We are unable to assign a Monitoring officer.</h2>
+            <th:block th:insert="fragments/elements :: error-summary-list(form)" />
         </div>
 
         <div class="grid-row">
