IFS-388 - Removes reject-invitation-confirm class from review-invitation body.

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/review-invitation.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/review-invitation.html
@@ -4,7 +4,7 @@
     <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Accept application',hasFormErrors=${#fields.hasErrors('${form.*}')}" />
 </head>
 
-<body th:with="context='assessment'" class="reject-invitation-confirm">
+<body th:with="context='assessment'">
 <th:block th:insert="fragments/layout :: body-start" />
 <th:block th:insert="fragments/layout :: global-header" />
 
