moved threads/ packages under ifs/

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/viability.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/financecheck/viability.html
@@ -79,7 +79,7 @@
             </div>
       </div>
       <div class="extra-margin">
-          <a th:href="@{/project/{projectId}/finance-check/organisation/{organisationId}/query(projectId=${model.projectId},organisationId=${model.organisationId},query_section=${T(org.innovateuk.threads.resource.FinanceChecksSectionType).VIABILITY.name()})}" class="button button-secondary">Queries</a>
+          <a th:href="@{/project/{projectId}/finance-check/organisation/{organisationId}/query(projectId=${model.projectId},organisationId=${model.organisationId},query_section=${T(org.innovateuk.ifs.threads.resource.FinanceChecksSectionType).VIABILITY.name()})}" class="button button-secondary">Queries</a>
           <a th:href="@{/project/{projectId}/finance-check/organisation/{organisationId}/note(projectId=${model.projectId},organisationId=${model.organisationId})}" class="button button-secondary">Notes</a>
       </div>
       <th:block th:unless="${model.isReadOnly()}">
