--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
@@ -4,14 +4,14 @@
     <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Application Summary'" />
 </head>
 
-<body th:with="context='comp-management'" class="app-summary competition-management" th:classappend="${currentApplication.isOpen() ? 'is-open' : 'is-closed' }">
+<body th:with="context='comp-management'" class="app-summary panel-assessment">
 <th:block th:insert="fragments/modals :: modal-overlay" />
 <th:block th:insert="fragments/layout :: body-start" />
 <th:block th:insert="fragments/layout :: global-header" />
 
 <main tabindex="-1" id="content">
     <th:block th:insert="fragments/layout :: main-content-start" />
-    <th:block th:insert="fragments/competition-setup :: comp-setup-header-sub (linkTitle='Back',linkClass='link-back',linkUrl=${backUrl}" />
+    <th:block th:insert="fragments/assessment :: assessment-header-sub(linkTitle='Back to panel overview',linkClass='link-back',linkUrl=${backUrl}" />
 
     <th:block th:with="applicationName=${#strings.isEmpty(currentApplication.name)} ? #{ifs.application.no_title} : ${currentApplication.name}">
         <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Application overview',subTitle=${applicationName},size='heading-xlarge'" />
