--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
@@ -11,10 +11,10 @@
 
 <main tabindex="-1" id="content">
     <th:block th:insert="fragments/layout :: main-content-start" />
-    <th:block th:insert="fragments/assessment :: assessment-header-sub(linkTitle='Back to panel overview',linkClass='link-back',linkUrl=${backUrl}" />
+    <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to panel overview',linkClass='link-back',linkUrl=@{/assessor/dashboard/competition/{compId}/panel(compId=${currentCompetition.id})})" />
 
     <th:block th:with="applicationName=${#strings.isEmpty(currentApplication.name)} ? #{ifs.application.no_title} : ${currentApplication.name}">
-        <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Application overview',subTitle=${applicationName},size='heading-xlarge'" />
+        <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Application summary',subTitle=${applicationName},size='heading-xlarge'" />
     </th:block>
 
     <form action="#" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}"
