IFS-2174 IFS-2586 Intenal User is able to Accept and reject the GOL new test cases added. Small selectors refactoring. Content change applied.

--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/grant-offer-letter-send.html
@@ -115,7 +115,7 @@
             <div class="form-group">
                 <fieldset>
                     <legend id="decisionGOL" class="extra-margin-bottom">
-                        Please review that these documents meet the requirements for the grant offer letter
+                        Please confirm that these documents meet the requirements for the grant offer letter.
                     </legend>
                     <div class="multiple-choice">
                         <input id="acceptGOL" value="APPROVED" type="radio" name="approvalType" required="required" data-switches-button-status="#submit-button"/>
