--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-review-send.html
@@ -19,14 +19,16 @@
 
     <!-- HARDCODED PROTOTYPE HTML -->
 
-    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${(param.status != null and param.status[0] == 'resendInvites' ? 'Resend invite to interview panel' : 'Assign applications to interview panel' )}, ${null})" />
+    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${(param.status != null and param.status[0] == 'resendInvites' ? 'Resend invites to interview panel' : 'Send invites to interview panel' )}, ${null})" />
 
     <p>Upload additional assessment feedback for applicants, edit the email and click send. The applications will then be assigned to this interview panel.</p>
 
-    <div class="grid-row sorting extra-margin">
-        <span class="heading-xlarge no-margin">4</span>
-        <span class="heading-small">applications</span>
-    </div>
+    <th:block th:if="${param.status == null or param.status[0] != 'resendInvites'}">
+        <div class="grid-row sorting extra-margin">
+            <span class="heading-xlarge no-margin">4</span>
+            <span class="heading-small">applications</span>
+        </div>
+    </th:block>
 
     <form>
 
