--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
@@ -18,7 +18,7 @@
 
     <!-- HARDCODED PROTOTYPE HTML -->
 
-    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Assign applications to interview panel'}, ${null})" />
+    <th:block th:insert="prototypes/fragments/comp-admin :: prototype-comp-admin-page-title-subheading(${'68: Technology inspired, competition closed'}, ${'Review invite email'}, ${null})" />
 
     <div class="table-overflow">
         <table>
