IFS-2208 - Replace `sectionsByType` map with `fundingFinancesSection` model property
After code review it was determined that it would be more suitable to
use a more specific `fundingFinancesSection` property rather than the
proposed `sectionsByType` as this keeps the `print.html` template a
bit cleaner (no to perform a check on a map).

--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/application/print.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/application/print.html
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-    <section class="landscape" th:if="${#maps.containsKey(sectionsByType, T(org.innovateuk.ifs.application.resource.SectionType).FUNDING_FINANCES)}">
+    <section class="landscape" th:if="${fundingFinancesSection}">
         <div>
             <h2 class="heading-medium">Funding breakdown</h2>
             <th:block th:insert="application/print-elements :: financial_summary_table" />
