IFS-29 Updates for formatting and tidy up.

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-panel-application-overview.html
@@ -4,7 +4,7 @@
     <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Application Summary'" />
 </head>
 
-<body th:with="context='comp-management'" class="app-summary panel-assessment">
+<body th:with="context='assessment'" class="app-summary panel-assessment">
 <th:block th:insert="fragments/modals :: modal-overlay" />
 <th:block th:insert="fragments/layout :: body-start" />
 <th:block th:insert="fragments/layout :: global-header" />
