--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition-mgt-application-overview.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition-mgt-application-overview.html
@@ -56,7 +56,7 @@
           method="post" enctype="multipart/form-data"
           th:object="${form}" class="form-serialize-js section-overview">
 
-        <th:block th:insert="fragments/application :: application-summary (isApplicant = false)" />
+        <th:block th:insert="fragments/application :: application-summary (isApplicant = false, hideDetails = false)" />
     </form>
 
     <div class="extra-margin">
